--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2024"
 clap = "4.5.48"
 colored = "3.0.0"
 dirs = "6.0.0"
-serde = "1.0.228"
+serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+
+[dev-dependencies]
+tempfile = "3.13.0"
