--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-clap = "4.5.48"
+clap = { version = "4.5.48", features = ["derive"] }
 colored = "3.0.0"
 dirs = "6.0.0"
 serde = { version = "1.0.228", features = ["derive"] }
