--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 clap = { version = "4.5.48", features = ["derive"] }
 colored = "3.0.0"
 dirs = "6.0.0"
+rand = "0.8"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 
