--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5.48", features = ["derive"] }
 colored = "3.0.0"
 dirs = "6.0.0"
